--- a/nx.json
+++ b/nx.json
@@ -1,5 +1,5 @@
 {
-  "npmScope": "angular-tools",
+  "npmScope": "angular-stuff",
   "affected": {
     "defaultBase": "master"
   },
@@ -14,12 +14,7 @@
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
       "options": {
-        "cacheableOperations": [
-          "build",
-          "lint",
-          "test",
-          "e2e"
-        ]
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
       }
     }
   },
@@ -31,5 +26,9 @@
       }
     ]
   },
-  "projects": {}
+  "projects": {
+    "let-directive": {
+      "tags": []
+    }
+  }
 }
